--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -230,10 +230,10 @@
             <ul>
                 <li class="navbar__watchers">
                     <a href="/smlouvy">Smlouvy</a>
+                    <a href="/VerejneZakazky">Veřejné zakázky</a>
+                    <a href="/Insolvence">Insolvence</a>
                     <a href="/sponzori">Sponzoři</a>
                     <a href="/ucty">Účty stran</a>
-                    <a href="/VerejneZakazky">Veřejné zakázky</a>
-                    @*<a href="/Insolvence">Insolvence</a>*@
                     <a href="/StatniWeby">Weby státu</a>
                 </li>
 
