--- a/Web.Statu/Views/Insolvence/Index.cshtml
+++ b/Web.Statu/Views/Insolvence/Index.cshtml
@@ -34,306 +34,9 @@
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 
 
-<div class="row">
-    <div class="col-xs-12">
-
-        <div class="cross-stats">
-            <div class="cross-stats__list">
-                <div class="cross-stats__item cross-stats__item--half-md">
-                    <div class="box-stats">
-                        <div class="box-stats__inner">
-                            <div class="box-stats__content">
-                                @{
-                                    AggregationContainerDescriptor<HlidacStatu.Lib.Data.Insolvence.Rizeni> aggs =
-                                    new AggregationContainerDescriptor<HlidacStatu.Lib.Data.Insolvence.Rizeni>()
-                                        .DateHistogram("x-agg", h => h
-                                            .Field(f => f.DatumZalozeni)
-                                            .Interval(Nest.DateInterval.Month)
-                                            .Format("yyyy-MM-dd")
-                                        );
-                                    DateTime minDate = new DateTime(DateTime.Now.Year - 1, DateTime.Now.Month, 1);
-                                    DateTime thisMonth = new DateTime(DateTime.Now.Year, DateTime.Now.Month, 1);
-                                    string query = "-stav:\"MYLNÝ ZÁP.\" OR -stav:\"ZRUŠENO VS\"";
-                                    var res = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(
-                                        "( " + query + " ) AND datumZalozeni:{" + HlidacStatu.Util.RenderData.ToElasticDate(minDate) + " TO *}",
-                                        1, 0, 0, limitedView: false, anyAggregation: aggs);
-
-                                    IEnumerable<ReportDataTimeValue> data = ((BucketAggregate)res.Result.Aggregations["x-agg"]).Items
-                                        .Cast<Nest.DateHistogramBucket>()
-                                        .Select(m => new ReportDataTimeValue()
-                                        {
-                                            Date = m.Date,
-                                            Value = m.DocCount ?? 0
-                                        });
-                                }
-                                <p class="box-stats__title">
-                                    <strong>@HlidacStatu.Util.RenderData.NiceNumber(data.Sum(m => m.Value))</strong><br>
-                                    Podaných insolvencí za rok
-                                </p>
-                                <p class="box-stats__progress">
-                                    + @HlidacStatu.Util.RenderData.NiceNumber(data.Where(m => m.Date == thisMonth).FirstOrDefault()?.Value ?? 0) <br>
-                                    <span class="box-stats__progress-unit">tento měsíc</span>
-                                    <span class="box-stats__progress-icon">
-                                        <i class="far fa-arrow-up"></i>
-                                    </span>
-                                </p>
-                            </div>
-                            <div class="box-stats__media">
-                                @UtilChart.RenderSimpleTimeChart(data, 230, 135, "Počet nových insolvencí", true)
-
-                                @*<img src="/Content/temp/stats-graph.png" width height alt class="box-stats__image">*@
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cross-stats__item cross-stats__item--half-md">
-                    <div class="box-stats">
-                        <div class="box-stats__inner">
-                            <div class="box-stats__content">
-                                @{
-                                    int[] vals = new int[] { 174, 175 };
-
-                                    aggs = new AggregationContainerDescriptor<HlidacStatu.Lib.Data.Insolvence.Rizeni>()
-                                        .Filter("typ", fi => fi
-                                             .Filter(fii => fii.Terms(fiit => fiit.Field("dokumenty.typUdalosti").Terms(vals)))
-                                             .Aggregations(agg2 => agg2
-                                                 .DateHistogram("x-agg", h => h
-                                                     .Field("dokumenty.datumVlozeni")
-                                                     .Interval(Nest.DateInterval.Month)
-                                                     .Format("yyyy-MM-dd")
-                                                )
-                                            )
-                                        );
-
-                                    query = "(dokumenty.typUdalosti:174 OR dokumenty.typUdalosti:175)";
-                                    res = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(
-                                        "( " + query + " ) AND datumZalozeni:{" + HlidacStatu.Util.RenderData.ToElasticDate(minDate) + " TO *}",
-                                        1, 0, 0, limitedView: false, anyAggregation: aggs);
-                                    var typ = ((SingleBucketAggregate)res.Result.Aggregations["typ"])
-                                        .First().Value;
-                                    data = ((BucketAggregate)typ).Items
-                                        .Cast<Nest.DateHistogramBucket>()
-                                        .Select(m => new ReportDataTimeValue()
-                                        {
-                                            Date = m.Date,
-                                            Value = m.DocCount ?? 0
-                                        });
-                                }
-                                <p class="box-stats__title">
-                                    <strong>@HlidacStatu.Util.RenderData.NiceNumber(data.Sum(m => m.Value))</strong><br>
-                                    Počet schválených oddlužení za rok
-                                </p>
-                                <p class="box-stats__progress">
-                                    + @HlidacStatu.Util.RenderData.NiceNumber(data.Where(m => m.Date == thisMonth).FirstOrDefault()?.Value ?? 0) <br>
-                                    <span class="box-stats__progress-unit">tento měsíc</span>
-                                    <span class="box-stats__progress-icon">
-                                        <i class="far fa-arrow-up"></i>
-                                    </span>
-                                </p>
-                            </div>
-                            <div class="box-stats__media">
-                                @UtilChart.RenderSimpleTimeChart(data, 230, 135, "Počet schválených oddlužení", true)
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cross-stats__item cross-stats__item--half-md">
-                    <div class="box-stats box-stats--middle">
-                        <div class="box-stats__inner">
-                            <div class="box-stats__icon">
-                                <i class="far fa-users"></i>
-                            </div>
-                            <div class="box-stats__content">
-                                @{
-                                    minDate = DateTime.Now.Date.AddDays(-29);
-                                    query = "dluznici.typ:\"F\" AND (-stav:\"MYLNÝ ZÁP.\" OR -stav:\"ZRUŠENO VS\")";
-                                    res = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(
-                                        "( " + query + " ) AND datumZalozeni:{" + HlidacStatu.Util.RenderData.ToElasticDate(minDate) + " TO *}",
-                                        1, 0, 0, limitedView: false);
-                                    decimal lastM = res.Total;
-
-                                    var maxDate = minDate;
-                                    minDate = maxDate.AddDays(-28);
-                                    query = "dluznici.typ:\"F\" AND (-stav:\"MYLNÝ ZÁP.\" OR -stav:\"ZRUŠENO VS\")";
-                                    res = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(
-                                        "( " + query + " ) AND datumZalozeni:{" + HlidacStatu.Util.RenderData.ToElasticDate(minDate) + " TO " + HlidacStatu.Util.RenderData.ToElasticDate(maxDate) + "}",
-                                        1, 0, 0, limitedView: false);
-
-                                    decimal prevM = res.Total;
-                                    decimal rozdil = prevM == 0 ? 1 : (lastM - prevM) / prevM;
-                                }
-                                <p class="box-stats__title">
-                                    <strong>@HlidacStatu.Util.RenderData.NiceNumber(lastM)</strong><br>
-                                    Počet osob v insolvenci za poslední měsíc
-                                </p>
-                            </div>
-                            <div class="box-stats__side">
-                                <p class="box-stats__progress box-stats__progress--icon-right">
-                                    @(rozdil.ToString("P1"))
-                                    <span class="box-stats__progress-icon">
-                                        <i class="far fa-arrow-@(rozdil<0 ? "down" : "up")"></i>
-                                    </span>
-                                    <br />
-                                    <span class="box-stats__progress-unit">oproti předchozímu</span>
-
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cross-stats__item cross-stats__item--half-md">
-                    <div class="box-stats box-stats--middle">
-                        <div class="box-stats__inner">
-                            <div class="box-stats__icon">
-                                <i class="far fa-file-alt"></i>
-                            </div>
-                            <div class="box-stats__content">
-                                @{
-                                    minDate = DateTime.Now.Date.AddDays(-29);
-                                    query = "dluznici.typ:\"P\" AND (-stav:\"MYLNÝ ZÁP.\" OR -stav:\"ZRUŠENO VS\")";
-                                    res = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(
-                                        "( " + query + " ) AND datumZalozeni:{" + HlidacStatu.Util.RenderData.ToElasticDate(minDate) + " TO *}",
-                                        1, 0, 0, limitedView: false);
-                                    lastM = res.Total;
-
-                                    maxDate = minDate;
-                                    minDate = maxDate.AddDays(-28);
-                                    query = "dluznici.typ:\"PF\" AND (-stav:\"MYLNÝ ZÁP.\" OR -stav:\"ZRUŠENO VS\")";
-                                    res = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(
-                                        "( " + query + " ) AND datumZalozeni:{" + HlidacStatu.Util.RenderData.ToElasticDate(minDate) + " TO " + HlidacStatu.Util.RenderData.ToElasticDate(maxDate) + "}",
-                                        1, 0, 0, limitedView: false);
-
-                                    prevM = res.Total;
-                                    rozdil = prevM == 0 ? 1 : (lastM - prevM) / prevM;
-                                }
-                                <p class="box-stats__title">
-                                    <strong>@HlidacStatu.Util.RenderData.NiceNumber(lastM)</strong><br>
-                                    Počet firem v insolvenci za poslední měsíc
-                                </p>
-                            </div>
-                            <div class="box-stats__side">
-                                <p class="box-stats__progress box-stats__progress--icon-right">
-                                    @(rozdil.ToString("P1"))
-                                    <span class="box-stats__progress-icon">
-                                        <i class="far fa-arrow-@(rozdil<0 ? "down" : "up")"></i>
-                                    </span>
-                                    <br />
-                                    <span class="box-stats__progress-unit">oproti předchozímu</span>
-
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--
-                            <div class="cross-stats__item cross-stats__item--half-md cross-stats__item--third-lg">
-                                <div class="box-stats">
-                                    <div class="box-stats__inner">
-                                        <div class="box-stats__content">
-                                            <p class="box-stats__title">
-                                                <strong>567</strong><br>
-                                                Schv&#xE1;leno zpen&#x11B;&#x17E;en&#xED; majetkov&#xE9; podstaty
-                                            </p>
-                                        </div>
-                                        <div class="box-stats__side">
-                                            <p class="box-stats__progress box-stats__progress--icon-right box-stats__progress--icon-sm">
-                                                +7%
-                                                <span class="box-stats__progress-icon">
-                                                    <i class="far fa-arrow-up"></i>
-                                                </span>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="cross-stats__item cross-stats__item--half-md cross-stats__item--third-lg">
-                                <div class="box-stats">
-                                    <div class="box-stats__inner">
-                                        <div class="box-stats__content">
-                                            <p class="box-stats__title">
-                                                <strong>32</strong><br>
-                                                Schv&#xE1;leno spl&#xE1;tkov&#xFD;m kalend&#xE1;&#x159;em
-                                            </p>
-                                        </div>
-                                        <div class="box-stats__side">
-                                            <p class="box-stats__progress box-stats__progress--icon-right box-stats__progress--icon-sm">
-                                                -7%
-                                                <span class="box-stats__progress-icon">
-                                                    <i class="far fa-arrow-down"></i>
-                                                </span>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="cross-stats__item cross-stats__item--half-md cross-stats__item--third-lg">
-                                <div class="box-stats">
-                                    <div class="box-stats__inner">
-                                        <div class="box-stats__content">
-                                            <p class="box-stats__title">
-                                                <strong>13</strong><br>
-                                                Schv&#xE1;leno kombinac&#xED; spl&#xE1;tkov&#xE9;ho kalend&#xE1;&#x159;e a zpen&#x11B;&#x17E;en&#xED;m majetkov&#xE9; podstaty
-                                            </p>
-                                        </div>
-                                        <div class="box-stats__side">
-                                            <p class="box-stats__progress box-stats__progress--icon-right box-stats__progress--icon-sm">
-                                                -5%
-                                                <span class="box-stats__progress-icon">
-                                                    <i class="far fa-arrow-down"></i>
-                                                </span>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                -->
-
-            </div>
-        </div>
-    </div>
-
-    @Html.Partial("_SearchForm", new HlidacStatu.Lib.ES.InsolvenceSearchResult())
+@Html.Action("CachedAction_Child_12H", new { model = Model, NameOfView = "Index.Content" })
 
 
-    <div class="col-xs-12">
-        <h2>Nové společnosti v insolvenci</h2>
-        @{
-            var spolecnosti = Model.NoveFirmyVInsolvenci;
-        }
-
-        <table class="table table-hover">
-            <thead>
-                @SearchResults.InsolvenceHead()
-            </thead>
-            <tbody>
-                @foreach (var item in spolecnosti.Result.Hits.Take(20))
-                {
-                    @SearchResults.InsolvenceRow(User, Request, item.Source, "")
-                }
-            </tbody>
-        </table>
-
-    </div>
-
-    <div class="col-xs-12">
-        <h2>Nové osoby v insolvenci</h2>
-        @{
-            var osoby = Model.NoveOsobyVInsolvenci;
-        }
-
-        <table class="table table-hover">
-            <thead>
-                @SearchResults.InsolvenceHead()
-            </thead>
-            <tbody>
-                @foreach (var item in osoby.Result.Hits.Take(20))
-                {
-                    @SearchResults.InsolvenceRow(User, Request, item.Source, "")
-                }
-            </tbody>
-        </table>
-    </div>
-</div>
 
 <h2>Ukázky možností</h2>
 <ul>
