--- a/Web.Statu/Views/Insolvence/Index.cshtml
+++ b/Web.Statu/Views/Insolvence/Index.cshtml
@@ -10,8 +10,13 @@
 
 
 @{
+    DateTime dataForDate = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch("*", 1, 1,
+            (int)HlidacStatu.Lib.ES.InsolvenceSearchResult.InsolvenceOrderResult.LatestUpdateDesc,
+            limitedView: false)
+        .ElasticResults.Hits.First().Source.PosledniZmena;
+
     ViewBag.Title = "Hlídač insolvencí";
-    ViewBag.SubTitle = "";
+    ViewBag.SubTitle = "k " + HlidacStatu.Util.RenderData.ToDate(dataForDate);
 
 
 }
@@ -34,9 +39,49 @@
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 
 
-@Html.Action("CachedAction_Child_12H", new { model = Model, NameOfView = "Index.Content" })
+@Html.Action("CachedAction_Child_4H", new { model = Model, NameOfView = "Index.Content" })
 
+<div class="row">
 
+    <div class="col-xs-12">
+        <h2>Nové společnosti v insolvenci</h2>
+        @{
+            var spolecnosti = Model.NoveFirmyVInsolvenci;
+        }
+
+        <table class="table table-hover">
+            <thead>
+                @SearchResults.InsolvenceHead()
+            </thead>
+            <tbody>
+                @foreach (var item in spolecnosti.Result.Hits.Take(20))
+                {
+                    @SearchResults.InsolvenceRow(User, Request, item.Source, "")
+                }
+            </tbody>
+        </table>
+
+    </div>
+
+    <div class="col-xs-12">
+        <h2>Nové osoby v insolvenci</h2>
+        @{
+            var osoby = Model.NoveOsobyVInsolvenci;
+        }
+
+        <table class="table table-hover">
+            <thead>
+                @SearchResults.InsolvenceHead()
+            </thead>
+            <tbody>
+                @foreach (var item in osoby.Result.Hits.Take(20))
+                {
+                    @SearchResults.InsolvenceRow(User, Request, item.Source, "")
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
 
 <h2>Ukázky možností</h2>
 <ul>
