Fixes Darujme stats

--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -101,8 +101,14 @@
 <div class="box-cta">
     <div class="container">
         <div class="box-cta__content">
-            <h2 class="box-cta__title">Pomozte n&#xE1;m udr&#x17E;ovat &#x10D;esk&#xFD; st&#xE1;t transparentn&#xED;</h2>
-            <p class="box-cta__text">Za dva roky n&#xE1;m <span class="box-cta__text-highlighted">278</span> lid&#xED; darovalo <span class="box-cta__text-highlighted">644 417 K&#x10D;</span>.</p>
+            <h2 class="box-cta__title">
+                Pomozte nám udržovat český stát transparentní
+            </h2>
+            <p class="box-cta__text">
+                Za tři roky nám <span class="box-cta__text-highlighted">@HlidacStatu.Lib.StaticData.DarujmeStats.Get().projectStats.donorsCount</span> lidí darovalo <span class="box-cta__text-highlighted">
+    @HlidacStatu.Util.RenderData.NicePrice(HlidacStatu.Lib.StaticData.DarujmeStats.Get().projectStats.collectedAmountEstimate.cents/100)
+</span>.
+            </p>
             <ul class="box-cta__list">
                 <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Kontrolujeme politiky a &#xFA;&#x159;edn&#xED;ky, zda s na&#x10D;imi pen&#x11B;zi zach&#xE1;zej&#xED; spr&#xE1;vn&#x11B;.</li>
                 <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Stali jsme se d&#x16F;le&#x17E;it&#xFD;m zdrojem informac&#xED; pro novin&#xE1;&#x159;e.</li>
