--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -110,15 +110,15 @@
 </span>.
             </p>
             <ul class="box-cta__list">
-                <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Kontrolujeme politiky a &#xFA;&#x159;edn&#xED;ky, zda s na&#x10D;imi pen&#x11B;zi zach&#xE1;zej&#xED; spr&#xE1;vn&#x11B;.</li>
-                <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Stali jsme se d&#x16F;le&#x17E;it&#xFD;m zdrojem informac&#xED; pro novin&#xE1;&#x159;e.</li>
-                <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Pom&#xE1;h&#xE1;me st&#xE1;tu zav&#xE1;d&#x11B;t modern&#xED; e-government.</li>
-                <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Zvy&#x161;ujeme transparentnost &#x10D;esk&#xE9;ho st&#xE1;tu.</li>
+                <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Kontrolujeme politiky a úředníky, zda s našimi penězi zacházejí správně.</li>
+                <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Stali jsme se důležitým zdrojem informací pro novináře.</li>
+                <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Zvyšujeme transparentnost českého státu.</li>
+                <li class="box-cta__item"><i class="fas fa-check" style="color:#2975DC;padding-right:10px;"></i> Pomáháme státu zavádět moderní e-government.</li>
             </ul>
 
             <p>
                 <a href="https://www.darujme.cz/projekt/1200384" class="btn btn-primary" target="_blank">
-                    Chci tak&#xE9; pomoci
+                    Pomožte nám i vy
                 </a>
             </p>
         </div>
