--- a/Web.Statu/Views/Manage/Zalozky.cshtml
+++ b/Web.Statu/Views/Manage/Zalozky.cshtml
@@ -54,7 +54,7 @@
                 </a>
             </td>
             <td>
-                @(bm.Created?.ToString("d.M.yyyy HH:mm") ?? "")
+                @(bm.Created.ToString("d.M.yyyy HH:mm") ?? "")
             </td>
             <td>
                 @typ
