--- a/Web.Statu/Views/Home/Osoba.cshtml
+++ b/Web.Statu/Views/Home/Osoba.cshtml
@@ -42,13 +42,14 @@
     </ol>
 }
 
-@Html.Action("Osoba_child", new { model = Model, auth = this.User.Identity.IsAuthenticated, aktualnost = aktualnost, NameOfView = "OsobaProfil" }) @*+ (string.IsNullOrEmpty(Request.QueryString["beta"]) ? "" : "2")*@
+@*@Html.Action("Osoba_child", new { model = Model, auth = this.User.Identity.IsAuthenticated, aktualnost = aktualnost, NameOfView = "OsobaProfil" }) //+ (string.IsNullOrEmpty(Request.QueryString["beta"]) ? "" : "2")*@
+@Html.Action("CachedAction_Child_12H", new { model = Model, auth = this.User.Identity.IsAuthenticated, NameOfView = "OsobaProfil", parameters = new string[] { "aktualnost", aktualnost.ToString() } })
 
 <div style="margin-top:40px"></div>
 
 @if ((ostat.SoukromeFirmy.Count + ostat.StatniFirmy.Count) > 0)
 {
-    @Html.Action("Osoba_child", new { model = Model, aktualnost = aktualnost, NameOfView = "OsobaProfil_Vazby" })
+    @Html.Action("CachedAction_Child_12H", new { model = Model, aktualnost = aktualnost, NameOfView = "OsobaProfil_Vazby", parameters = new string[] { "aktualnost", aktualnost.ToString() } })
 }
 
 
