--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -324,7 +324,7 @@
                 </form>
                 <div>
                     <a class="header__search__hint" href="/napoveda">
-                        Jak vyhledávat?
+                        Jak vyhledávat? <sup style="color:yellow;text-decoration:none">vylepšeno</sup>
                     </a>
                     <a class="header__search__hint pull-right" style="padding-top:2px;" href="/snadnehledani">
                         Snadné hledání
